# OpenSimplex2

./: Cargo.toml  README.md
C/: test_OpenSimplex2F.c
_old/c/: Makefile  OpenSimplex2F.c  OpenSimplex2F.h
_old/cpp/: OpenSimplex2S.hpp
_old/csharp/: OpenSimplex2F.cs
_old/java/: OpenSimplex2S.java
_old/java/legacy_unoptimized/: OpenSimplexUnoptimized.java
cpp/: OpenSimplex2S.cpp
csharp/: FastSimplexStyleNoise.cs  OpenSimplex2.cs  OpenSimplex2F.cs  OpenSimplex2S.cs  SuperSimplexNoise.cs
csharp/legacy/: OpenSimplex.cs
glsl/: OpenSimplex2.glsl  OpenSimplex2S.glsl  bccNoise4Point.glsl
hlsl/: OpenSimplex2.hlsl  OpenSimplex2S.hlsl  bccNoise4Point.hlsl  bccNoise8Point.hlsl
java/: FastSimplexStyleNoise.java  OpenSimplex2.java  OpenSimplex2F.java  OpenSimplex2S.java  OpenSimplexNoise.java  OpenSimplexOld.java  SuperSimplexNoise.java
java/areagen/: FastSimplexStyleNoise.java  OpenSimplex2F.java  OpenSimplex2S.java  SuperSimplexNoise.java
java/legacy/: OpenSimplex.java  OpenSimplexUnoptimized.java
java/test/: NoiseDemo2.java  NoiseDemo3.java  NoiseDemoEvalOnly.java  NoiseMetrics2_FSS.java  NoiseMetrics2_SS.java  NoiseMetrics3_FSS.java  NoiseMetrics3_SS.java  NoiseMetrics4_OSN.java
rust/: OpenSimplex2.h  fast.rs  ffi.rs  lib.rs  opensimplex2.rs  opensimplex2s.rs  smooth.rs
